<resources>
    <string name="app_name">MediaScanner</string>
    <string name="mainMenu_scan">Scan</string>
    <string name="mainMenu_media">Media</string>
    <string name="mainMenu_account">Account</string>
    <string name="mainMenu_scan_buttonScan">Scan</string>
    <string name="mainMenu_scan_ISBNInput">ISBN</string>
    <string name="mainMenu_scan_search">Search</string>
    <string name="mainMenu_media_setupRoom">Create a room</string>
    <string name="setupRoom_createButton">Create</string>
    <string name="setupRoom_modifyButton">Modify</string>
    <string name="setupRoom_cancelButton">Cancel</string>
    <string name="setupRoom_deleteButton">Delete</string>
    <string name="setupRoom_roomNameEditText">Room name</string>
    <string name="productDetails_delete">Delete</string>
    <string name="productDetails_addToRoom">Add to room</string>
    <string name="scan_toast_noProductFound">No product found for this barcode</string>
    <string name="productDetails_toast_notAMedia">Not a media</string>
    <string name="scan_toast_notAValidBarcode">Not a valid barcode</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="product_details_brand">Brand: %s</string>
    <string name="product_details_isbn">ISBN/EAN/UPC: %s</string>
    <string name="product_details_editor">Editor: %s</string>
    <string name="product_details_category">Category: %s</string>
    <string name="product_details_unknown">Unknown</string>
    <string name="Login_read_policy_start">"I have read and accept the "</string>
    <string name="Login_read_policy_end">Privacy Policy</string>
    <string name="login_error_accept_policy">You must accept the Privacy Policy to login</string>
    <string name="mainMenu_scan_orText">Or</string>
    <string name="mainMenu_account_title">Account</string>
    <string name="mainMenu_account_requestButton">Requests</string>
    <string name="mainMenu_account_buttonRequestAccess">Request Access</string>
    <string name="productActivity_imageDescription">Product Image</string>
    <string name="requestActivity_accept">Accept</string>
    <string name="requestActivity_deny">Deny</string>
    <string name="ActivityRequest_title">Requests</string>
    <string name="mainMenu_account_accessRefused">You don\'t have access to this user\'s data</string>
    <string name="mainMenu_search">Search</string>
    <string name="mainMenu_search_title">Search</string>
    <string name="mainMenu_search_inputHint">Search a title or an ISBN</string>
    <string name="mainMenu_account_inputHint">Email</string>
    <string name="mainActivity_search_textHeader">from</string>
    <string name="mainActivity_search_headerNameForUser">your library</string>
    <string name="mainMenu_scan_buttonStopScan">Stop</string>
    <string name="mainMenu_media_title">Library</string>
</resources>